Copy BS card template, fix header z-index

--- a/css/main.css
+++ b/css/main.css
@@ -203,6 +203,7 @@ body {
   position: absolute;
   top: 60px;
   right: 0;
+  z-index: 1;
 }
 
 .myNavBar__right .navbar-nav .nav-item .overlay::before {
