--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -168,6 +168,7 @@
         position: absolute;
         top: 60px;
         right: 0;
+        z-index: 1;
 
         &::before {
           content: "";
